# skypro.tony

./: .env.example  .flake8  .gitignore  README.md  file1.py  file2.py  main.py  pyproject.toml  requirements.txt
data/: empty.xlsx  mistake_csv.csv  mistake_json.json  not_json.json
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html
moduls_test/: test.csv_pandas.py  test.decorators.py  test.external_api.py  test.generators.py  test.utils.py
src/: csv_pandas.py  decorators.py  external_api.py  generators.py  learning.py  linking_functions_main.py  masks.py  processing.py  re_collections.py  transact_counter.py  utils.py  widget.py
tests/: conftest.py  num_test.py  test.generators.py  test.masks.py  test.processing.py  test.widget.py  test_csv_pandas.py  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_pytest.py  test_re_collections.py  test_transact_counter.py  test_utils.py  test_widget.py
trash/: num_test.py
